// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select Input test Renderiza Componente Con show opcions false 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="containerSelect"
      >
        <label />
        <select
          class="minimal"
          required=""
        >
          <option
            class="optionDefault"
            hidden=""
          >
            esta es la opcionDefault
          </option>
          <option
            value="10"
          >
            10
          </option>
          <option
            value="9"
          >
            9
          </option>
          <option
            value="21"
          >
            21
          </option>
          <option
            value="13"
          >
            13
          </option>
        </select>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="containerSelect"
    >
      <label />
      <select
        class="minimal"
        required=""
      >
        <option
          class="optionDefault"
          hidden=""
        >
          esta es la opcionDefault
        </option>
        <option
          value="10"
        >
          10
        </option>
        <option
          value="9"
        >
          9
        </option>
        <option
          value="21"
        >
          21
        </option>
        <option
          value="13"
        >
          13
        </option>
      </select>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`Select Input test Renderiza Componente Con show opcions true 1`] = `
Object {
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="containerSelect"
      >
        <label />
        <select
          class="minimal"
          required=""
        >
          <option
            class="optionDefault"
            hidden=""
          >
            esta es la opcionDefault
          </option>
          <option
            value="10"
          >
            10:00 AM
          </option>
          <option
            value="9"
          >
            09:00 AM
          </option>
          <option
            value="21"
          >
            09:00 PM
          </option>
          <option
            value="13"
          >
            01:00 PM
          </option>
        </select>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="containerSelect"
    >
      <label />
      <select
        class="minimal"
        required=""
      >
        <option
          class="optionDefault"
          hidden=""
        >
          esta es la opcionDefault
        </option>
        <option
          value="10"
        >
          10:00 AM
        </option>
        <option
          value="9"
        >
          09:00 AM
        </option>
        <option
          value="21"
        >
          09:00 PM
        </option>
        <option
          value="13"
        >
          01:00 PM
        </option>
      </select>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;
